--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -1,6 +1,9 @@
+@import 'mixins';   
+
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -11,4 +14,25 @@ a {
 html,
 body {
   height: 100vh;
+}
+
+button {
+  display: inline-block;
+  border: none;
+  padding: 1rem 2rem;
+  margin: 0;
+  text-decoration: none;
+  font-family: sans-serif;
+  font-size: 1rem;
+  cursor: pointer;
+  text-align: center;
+  transition: background 250ms ease-in-out, transform 150ms ease;
+}
+
+button:focus {
+  outline-offset: -4px;
+}
+
+button:active {
+  transform: scale(0.99);
 }
