--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -1,11 +1,22 @@
-@import 'mixins';   
+@use "./mixins" as *;
+@use "./variables" as *;
+@use "./typography" as *;
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
 }
+
+// Apply font family
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Corben-Bold", sans-serif;
+}
+
+p {
+  font-family: "Gilroy-ExtraBold", sans-serif;
+}
+
 
 a {
   text-decoration: none;
