--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -3,4 +3,14 @@ $mobile: 576px;
 $tablet: 768px;
 $desktop: 1280px;
 
-// Colors
+// // Colors // //
+// Primary Colors
+$mvp-black: #000000; // Borders and Text
+$mvp-light-blue: #0099ff; // Text and Interactive Elements
+$mvp-white: #ffffff; // Universal White for text and inputs
+$mvp-yellow: #ffd22f; // Backgrounds and Icons
+
+// Secondary Colors
+$mvp-dark-blue: #0954b0; // Borders and Text
+$mvp-red: #ff7070; // Important Text
+$mvp-cream: #fff9f4; // Backgrounds and Highlights
