--- a/src/components/Landing/Hero/Hero.scss
+++ b/src/components/Landing/Hero/Hero.scss
@@ -5,12 +5,7 @@
 .hero {
   width: 100vw;
   height: 45rem;
-  background: rgb(0, 153, 255);
-  background: linear-gradient(
-    180deg,
-    rgba(0, 153, 255, 0.2049194677871149) 0%,
-    rgba(255, 255, 255, 1) 100%
-  );
+  color: $mvp-black;
 
   @include desktop {
     max-width: 100vw;
@@ -19,21 +14,28 @@
   }
 
   &__container {
-      &--content {
-        position: relative;
-  
-        @include desktop {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          margin: auto;
-        }
+    &--content {
+      z-index: 2;
+      background-image: linear-gradient(
+        180deg,
+        rgba(0, 153, 255, 0.2049194677871149) 0%,
+        rgba(255, 255, 255, 1) 100%
+      );
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 1rem;
+
+      @include tablet {
+        padding: 1.5rem;
       }
+    }
     &--main {
-        display: flex; 
-        flex-direction: row;
-        align-items: center;
+        z-index:1;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
     }
     &--cards {
       display: none;
@@ -43,21 +45,47 @@
         flex-direction: row;
       }
     }
+  }
 
-    &--buttons {
+  &__title {
+    @include mobile-pageheader;
 
+    @include tablet {
+      @include desktop-pageheader;
     }
-    
-    &--background {
+
+    // TODO: Highlight only works on desktop - need to fix
+    &--highlight {
+      &:before {
+        content: "";
+        position: absolute;
+        width: 12%;
+        height: 3%;
+        margin-top: 3.3rem;
+        background-color: $mvp-yellow;
+        z-index: -1;
+      }
     }
   }
 
+  &__button {
+    border-radius: 2rem;
+    background-color: $mvp-yellow;
+    font-weight: bolder;
+    @include mobile-buttons;
 
-  &__cards{
+    &:hover {
+      background-color: $mvp-red;
+      cursor: pointer;
+      transform: scale(1.1);
+      color: $mvp-white;
+      transition: all 0.5s ease-in-out;
+    }
 
-  
+    @include tablet {
+      @include desktop-buttons;
+    }
   }
-
 
   &__background {
     position: absolute;
