--- a/src/pages/WelcomePage/WelcomePage.scss
+++ b/src/pages/WelcomePage/WelcomePage.scss
@@ -5,18 +5,30 @@
   align-items: center;
 }
 
+.onboarding {
+  background-image: url('../../assets/images/network.png');
+  background-size: cover; 
+}
+
 .swipe-arrow {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 1rem; 
-  color: #888; 
+  color: rgb(205, 160, 89); 
+}
+
+.underline {
+  border-bottom: 2px solid;
+  border-bottom-color: black
 }
 
 .arrow-icon {
-  font-size: 2rem;
+  font-size: 1rem;
   margin-top: 0.5rem;
-  color: #888; 
+  margin-left: 2rem;
+  color: black; 
+  text-decoration: underline;
 }
 
 .swipe-transition {
