--- a/src/components/Landing/About/About.scss
+++ b/src/components/Landing/About/About.scss
@@ -2,9 +2,62 @@
 @use "../../../styles/partials/variables" as *;
 @use "../../../styles/partials/global" as *;
 
-
 .about {
+  width: 100vw;
+  height: 45rem;
+  color: $mvp-black;
 
+  @include desktop {
+    max-width: 100vw;
+    height: 60rem;
+    margin: auto;
+  }
 
-    
+  &__container {
+    &--content {
+    //   z-index: 2;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      padding: 1rem;
+
+      @include tablet {
+        padding: 1.5rem;
+      }
+    }
+
+    &--image {
+      display: none;
+
+      @include tablet {
+        display: flex;
+      }
+    }
+
+    &--main {
+    //   z-index: 1;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+    }
+  }
+  &__image {
+    width: 67.5rem;
+  }
+
+  &__background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 45rem;
+    object-fit: cover;
+    z-index: -1;
+
+    @include desktop {
+      max-width: 100vw;
+      max-height: 60rem;
+    }
+  }
 }
