fix bug where background goes into nav

--- a/src/components/Landing/Header/Header.scss
+++ b/src/components/Landing/Header/Header.scss
@@ -11,7 +11,7 @@
     @include desktop-body;
   }
   @include desktop {
-    max-width: 80rem;
+    max-width: 100vw;
     margin: auto;
     @include desktop-body;
   }
@@ -30,6 +30,8 @@
       justify-content: space-between;
     }
     @include desktop {
+      max-width: 80rem;
+      margin:auto;
       padding: 1.5rem;
     }
   }
