fix bug in hero section

--- a/src/components/Landing/Hero/Hero.scss
+++ b/src/components/Landing/Hero/Hero.scss
@@ -30,12 +30,17 @@
       @include tablet {
         padding: 1.5rem;
       }
+
     }
     &--main {
         z-index:1;
       display: flex;
       flex-direction: row;
       align-items: center;
+      @include desktop {
+        max-width: 80rem;
+        margin: auto;
+      }
     }
     &--cards {
       display: none;
