--- a/src/components/Landing/About/About.scss
+++ b/src/components/Landing/About/About.scss
@@ -4,7 +4,7 @@
 
 .about {
   width: 100%;
-  height:100%;
+  height: 100%;
   color: $mvp-black;
 
   @include desktop {
@@ -14,10 +14,7 @@
   }
 
   &__container {
-
-
     &--content {
-    //   z-index: 2;
       display: flex;
       flex-direction: row;
       align-items: center;
@@ -29,9 +26,16 @@
       }
     }
 
-    &__points {
-        display: flex;
-        flex-direction: column;
+    &--points {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 1rem;
+
+      @include tablet {
+        padding: 1.5rem;
+      }
     }
 
     &--image {
@@ -39,33 +43,67 @@
 
       @include tablet {
         display: flex;
+        object-fit: contain;
       }
     }
 
     &--main {
-    //   z-index: 1;
+      width: 100%;
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
+      padding: 1rem;
+      text-align: center;
+
+      @include tablet {
+        max-width: 60rem;
+        padding: 1.5rem;
+      }
     }
   }
 
   &__info {
     padding: 1rem;
+    @include mobile-subheader;
+
+    @include tablet {
+      @include desktop-subheader;
+    }
 
     @include desktop {
-     padding: 1.5rem;
+      padding: 1.5rem;
     }
   }
-  &__image {
-    width: 67.5rem;
+
+  &__title {
+    @include mobile-subheader;
+
+    @include tablet {
+      @include desktop-subheader;
+    }
   }
 
+  &__description {
+    @include mobile-body;
+    padding: 1rem;
+
+    @include tablet {
+      @include desktop-body;
+    }
+  }
+
+  &__image {
+    width: 30rem;
+    z-index: 2;
+  }
+
+  // TODO: Background design not showing up
   &__background {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 45rem;
     object-fit: cover;
     z-index: -1;
