--- a/src/pages/LoginPage/LoginPage.scss
+++ b/src/pages/LoginPage/LoginPage.scss
@@ -1,16 +1,50 @@
+.centerForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  background: var(--007, #FFF9F4);
+}
+
+@media (max-height: 780px) {
+  .centerForm {
+    height: 120vh;
+  }
+}
+
+// .background {
+//   background: url('../../assets/images/network.png'), lightgray 50% / cover no-repeat;
+//   width: 40.2315rem;
+//   height: 96.82738rem;
+//   transform: rotate(-34.346deg);
+//   flex-shrink: 0;
+// }
+
+.logoMark {
+  margin-top: 3rem;
+  height: 4.8rem;
+  z-index: 1;
+}
+
+.coffeeChat{
+  z-index: 1;
+}
+
 .loginH2 {
   margin-top: 2rem;
-  margin-bottom: 2rem;
-  font-family: 'Corben-bold', sans-serif;
-  font-weight: 600;
+  margin-bottom: 3rem;
+  font-family: 'Gilroy-bold', sans-serif;
+  font-size: xx-large;
+  z-index: 1;
 }
 
 .loginForm {
-  margin: auto;
   width: 80%;
+  z-index: 1;
 }
 
 .inputLogin {
+  background-color: transparent;
   padding: 1rem;
   padding-bottom: 0%;
   margin-bottom: 1rem;
@@ -18,14 +52,14 @@
   border-bottom: 1px solid black;
   width: 100%;
   position: relative;
-  font-family: 'Corben', serif;
-  font-size: large;
+  font-family: 'Gilroy-light', sans-serif;
+  font-weight: 100;
+  font-size: x-large;
 }
 
 .checkBoxLoginDiv {
   display: flex;
-  margin-bottom: 2rem;
-
+  margin-bottom: 5rem;
 }
 
 .checkBoxLogin {
@@ -38,22 +72,59 @@
   border-radius: 20px;
   width: 9rem;
   color: white;
-  font-family: 'Corben', serif;
-  font-size: large;
+  font-family: 'Gilroy-light', sans-serif;
+  font-weight: 100;
+  font-size: x-large;
   padding: 0.5rem;
-  padding-top: 0;
-  padding-bottom: 0.1;
+  text-align: -webkit-center;
+  position: relative;
+  z-index: 1;
 }
 
 .continueWith {
   margin-top: 2rem;
   margin-bottom: 0.6rem;
   font-size: medium;
+  z-index: 1;
 }
 
 .altBtns {
   justify-content: space-evenly;
   display: flex;
   width: 100%;
+  z-index: 1;
 }
 
+.linkSvg {
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: 0.5rem;
+}
+
+.linkText {
+  // border: solid green;
+  
+}
+
+.pinkBlob {
+  background: url('../../assets/background/pink.png');
+  position: absolute;
+  top: -2rem;
+  height: 13rem;
+  width:-webkit-fill-available;
+}
+
+.pinkBlob2 {
+  background: url('../../assets/background/pink2.png');
+  position: absolute;
+  bottom: 5rem;
+  height: 35rem;
+  width:-webkit-fill-available;
+}
+
+@media (max-height: 780px) {
+  .pinkBlob2 {
+    position: absolute;
+    bottom: -5rem;
+  }
+}
