--- a/src/pages/SignUp/SignUp.scss
+++ b/src/pages/SignUp/SignUp.scss
@@ -1,29 +1,35 @@
 .signUpHeader {
-    font-family: 'Corben', serif;
-    text-align: center;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+    font-family: 'Gilroy-bold', sans-serif;
+    font-size: xx-large;
+    z-index: 1;
 }
 
 .createUserForm {
-    margin: auto;
-    margin-top: 2rem;
     width: 80%;
+    z-index: 1;
 }
 
 .inputStyle {
-        padding: 1rem;
-        padding-bottom: 0%;
-        margin-bottom: 1rem;
-        border: none;
-        border-bottom: 1px solid black;
-        width: 89%;
-        position: relative;
-        font-family: 'Corben', serif;
+    padding: 1rem;
+    background-color: transparent;
+    padding-bottom: 0%;
+    margin-bottom: 1rem;
+    border: none;
+    border-bottom: 1px solid black;
+    width: 100%;
+    position: relative;
+    font-family: 'Gilroy-light', sans-serif;
+    font-weight: 100;
+    font-size: x-large;
 }
 
 
 .buttonContainer {
     display: flex;
     justify-content: center;
+    margin-top: 2rem;
 }
 
 .createAccoutnBtn {
@@ -31,8 +37,52 @@
     border-radius: 20px;
     width: 9rem;
     color: white;
-    font-family: 'Corben', serif;
-    font-size: large;
+    font-family: 'Gilroy-light', sans-serif;
+    font-weight: 100;
+    font-size: x-large;
     padding: 0.5rem;
+    margin-top: 5rem;
+}
 
+.background {
+    background: url('../../assets/images/network.png'), rgb(178, 203, 246) 50% / cover no-repeat;
+    width: 40.2315rem;
+    height: 40.82738rem;
+    transform: rotate(37deg) translateY(-9rem);
+    flex-shrink: 0;
+    color: #E7F0FF;
+    border-radius: 100%;
+}
+
+.background2 {
+    background: url('../../assets/images/network.png'), rgb(178, 203, 246) 50% / cover no-repeat;
+    width: 40.2315rem;
+    height: 40.82738rem;
+    transform: translateY(-68rem) translateX(20rem);
+    flex-shrink: 0;
+    color: #E7F0FF;
+    border-radius: 100%;
+}
+
+.greenBlob {
+    background: url('../../assets/background/green.png');
+    width: -webkit-fill-available;
+    position: absolute;
+    bottom: 0;
+    height: 19rem;
+}
+
+@media (max-height: 780px) {
+    .greenBlob {
+        position: absolute;
+        bottom: -9rem;
+    }
+  }
+
+.greenBlob2 {
+    background: url('../../assets/background/green2.png');
+    width: -webkit-fill-available;
+    height: 21rem;
+    position: absolute;
+    top: 0;
 }
