--- a/src/components/Landing/Hero/Hero.scss
+++ b/src/components/Landing/Hero/Hero.scss
@@ -46,8 +46,13 @@
       display: none;
 
       @include tablet {
+        width: 20rem;
         display: flex;
         flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        z-index: -1;
+        margin-right: 10rem;
       }
     }
 
@@ -68,11 +73,22 @@
       &:before {
         content: "";
         position: absolute;
-        width: 12%;
+        width: 11rem;
         height: 3%;
-        margin-top: 3.3rem;
+        margin-top: 2.5rem;
         background-color: $mvp-yellow;
         z-index: -1;
+      }
+      @include tablet {
+        &:before {
+          content: "";
+          position: absolute;
+          width: 13rem;
+          height: 3%;
+          margin-top: 3.3rem;
+          background-color: $mvp-yellow;
+          z-index: -1;
+        }
       }
     }
   }
