--- a/src/components/Landing/Partners/Partners.scss
+++ b/src/components/Landing/Partners/Partners.scss
@@ -1,3 +1,44 @@
 @use "../../../styles/partials/mixins" as *;
 @use "../../../styles/partials/variables" as *;
 @use "../../../styles/partials/global" as *;
+
+.partners {
+  &__container {
+    &--header {
+      display: flex;
+      flex-direction: column;
+      padding: 1rem;
+
+      @include tablet {
+        padding: 1.5rem;
+      }
+    }
+    &--info {
+        display: flex;
+        flex-direction: row;
+        padding: 1rem;
+
+        @include tablet {
+            padding: 1.5rem;
+        }
+    }
+  }
+
+  &__title {
+    text-align: left;
+    @include mobile-subheader;
+
+    @include tablet {
+        @include desktop-subheader;
+    }
+  }
+
+  &__partner {
+    width: 25rem;
+    margin: auto;
+
+    @include tablet {
+        width: 40rem;
+    }
+  }
+}
