--- a/src/components/Landing/Partners/Partners.scss
+++ b/src/components/Landing/Partners/Partners.scss
@@ -4,6 +4,17 @@
 
 .partners {
   &__container {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+
+    @include tablet {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      padding: 1.5rem;
+    }
     &--header {
       display: flex;
       flex-direction: column;
@@ -14,13 +25,29 @@
       }
     }
     &--info {
+      @include tablet {
+        padding: 3rem;
+      }
+    }
+    &--images {
+
+        &:before {
+            content: "";
+            position: absolute;
+            right: 0;
+            width: 75rem;
+            height: 23rem;
+            margin-top: -2rem;
+            border-radius: 3rem 0 0 3rem;
+            background-color: $mvp-red;
+            opacity: 50%;
+            z-index: -1;
+        }
+      @include tablet {
         display: flex;
         flex-direction: row;
-        padding: 1rem;
-
-        @include tablet {
-            padding: 1.5rem;
-        }
+        padding: 3rem;
+      }
     }
   }
 
@@ -29,7 +56,7 @@
     @include mobile-subheader;
 
     @include tablet {
-        @include desktop-subheader;
+      @include desktop-subheader;
     }
   }
 
@@ -38,7 +65,41 @@
     margin: auto;
 
     @include tablet {
-        width: 40rem;
+      width: 40rem;
+    }
+  }
+
+  //   TODO: may need to be the same size as the about section mockup photo
+  &__mockup {
+    display: none;
+
+    @include tablet {
+      display: flex;
+      width: 35rem;
+    }
+  }
+
+  &__description {
+    @include mobile-subheader; 
+    padding: 1rem;
+
+    @include tablet {
+        @include desktop-subheader;
+        padding: 1.5rem;
+    }
+  }
+  &__highlight {
+    color: $mvp-red;
+    opacity: 50%;;
+  }
+
+  &__image {
+    width: 21.75rem;
+    height: 18.5rem;
+    &--lasting {
+      height: 18rem;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border-radius: 0.625rem;
     }
   }
 }
