--- a/src/components/Landing/Partners/Partners.scss
+++ b/src/components/Landing/Partners/Partners.scss
@@ -40,8 +40,8 @@
         &:before {
           content: "";
           position: absolute;
-          right: 0;
-          width: 75rem;
+          left:0;
+          width: 80rem;
           height: 23rem;
           margin-top: -2rem;
           border-radius: 3rem 0 0 3rem;
