--- a/src/components/Landing/Partners/Partners.scss
+++ b/src/components/Landing/Partners/Partners.scss
@@ -3,6 +3,15 @@
 @use "../../../styles/partials/global" as *;
 
 .partners {
+    width: 100%;
+    height: 45rem;
+
+    @include desktop {
+        max-width: 1280rem;
+        height: 100vh;
+        margin: auto;
+      }
+      
   &__container {
     display: flex;
     flex-direction: column;
