--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,7 +1,7 @@
-// Media Query Sizes 
+// Media Query Sizes
 $mobile: 576px;
 $tablet: 768px;
-$desktop: 1280px;
+$desktop: 1024px;
 
 // // Colors // //
 // Primary Colors
@@ -14,3 +14,4 @@ $mvp-yellow: #ffd22f; // Backgrounds and Icons
 $mvp-dark-blue: #0954b0; // Borders and Text
 $mvp-red: #ff7070; // Important Text
 $mvp-cream: #fff9f4; // Backgrounds and Highlights
+$mvp-gray: #f3f3f3; //Highlights
