--- a/src/components/Landing/Header/Header.scss
+++ b/src/components/Landing/Header/Header.scss
@@ -10,6 +10,7 @@
   @include tablet {
     @include desktop-body;
   }
+  
   @include desktop {
     max-width: 100vw;
     margin: auto;
@@ -39,15 +40,19 @@
   &__navlist {
     display: none;
     &--link {
-      text-decoration: none;
       color: $mvp-black;
       padding:.75rem;
+      list-style-type: none;
       &:hover {
         cursor: pointer;
         color: $mvp-light-blue;
         transform: scale(1.1);
         transition: 0.2s all ease-in-out;
         opacity: 0.7;
+      }
+
+      &--search {
+        list-style-type: none;
       }
     }
 
