--- a/src/components/Landing/Footer/Footer.scss
+++ b/src/components/Landing/Footer/Footer.scss
@@ -6,23 +6,71 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+
+  @include mobile-body;
+
+  @include tablet {
+    @include desktop-body;
+  }
+  
+  @include desktop {
+    max-width: 80rem;
+    // max-width: 100vw;
+    margin: auto;
+    @include desktop-body;
+  }
+
   &__container {
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     @include tablet {
       display: flex;
       flex-direction: row;
+      justify-content: space-evenly;
     }
   }
 
-  &__icons,
-  &__store {
+  &__items {
     display: flex;
     flex-direction: column;
     @include tablet {
-      display: flex;
       flex-direction: row;
+      padding-left: 30rem;
+    }
+  }
+  &__list {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  &__list-item {
+    list-style-type: none;
+    padding: 0.5rem;
+    @include mobile-body;
+    font-size: 2rem;
+    @include tablet {
+
+      @include desktop-body;
+    }
+    &:hover {
+      cursor: pointer;
+      color: $mvp-light-blue;
+      transform: scale(1.1);
+      transition: 0.2s all ease-in-out;
+      opacity: 0.7;
+    }
+  }
+
+  &__logo {
+    width: 90%;
+    padding: 1rem;
+    display: flex;
+    justify-content: flex-start;
+    @include tablet {
+      width: 300px;
     }
   }
 }
